--- a/css/style.css
+++ b/css/style.css
@@ -7,29 +7,8 @@
 
 @font-face {
     font-family: 'Bodoni 72';
-    src: url('BodoniSvtyTwoITCTT-BookIta.woff2') format('woff2'),
-        url('BodoniSvtyTwoITCTT-BookIta.woff') format('woff');
+    src: url('../fonts/BodoniSevITC-Book.woff') format('woff');
     font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Bodoni 72';
-    src: url('BodoniSvtyTwoITCTT-Book.woff2') format('woff2'),
-        url('BodoniSvtyTwoITCTT-Book.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Bodoni 72';
-    src: url('BodoniSvtyTwoITCTT-Bold.woff2') format('woff2'),
-        url('BodoniSvtyTwoITCTT-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
 }
 
 * {
