--- a/css/projects.css
+++ b/css/projects.css
@@ -279,6 +279,8 @@ a.top img{
     }
     footer{
         width: 100%;
+        position: relative;
+        background-color: #000;
     }
     
     footer .wrapper{
@@ -301,6 +303,7 @@ a.top img{
         position: fixed;
         top: 0;
         z-index: 10;
+        width: 100%;
     }
 
     .icons {
@@ -403,6 +406,11 @@ a.top img{
         width: 100%;
         word-break: keep-all;
       }
+      .wrap .exp{
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+
       .wrap{
         width: 100%;
       }
