--- a/css/style.css
+++ b/css/style.css
@@ -388,13 +388,13 @@ p{
 /* footer */
 
 footer{
-    position: relative;
+    /* position: relative; */
     /* bottom: 0; */
-    
-    height: 200px;
+    display: none;
+    /* height: 200px;
     width: 100%;
     background-color: #222222;
-    color: #515151;
+    color: #515151; */
 }
 
 .wrapper{
@@ -521,11 +521,12 @@ footer{
         display: none;
     }
     footer{
-        width: 100%;
+        display: none;
+        /* width: 100%;
         position: relative;
-        word-break: keep-all;
+        word-break: keep-all; */
     }
-    footer .wrapper{
+    /* footer .wrapper{
         width: 100%;
     }
     footer .wrapper .icons{
@@ -533,7 +534,7 @@ footer{
         position: absolute;
         left: 0;
         bottom: 0;
-    }
+    } */
 
     .mobile-header{
         display: flex;
@@ -560,7 +561,7 @@ footer{
     }
     .icons img{
         height: 20px;
-        object-fit: contain;
+       http://127.0.0.1:5501/img/seoul_head.png object-fit: contain;
     }
 
     .logo{
@@ -568,9 +569,10 @@ footer{
         display: flex;
         justify-content: center;
         align-items: center;
+        white-space: nowrap;
     }
     .logo h1{
-        font-size: 25px;
+        font-size: 5vw;
     }
 
     #sidebar {
